test/TestSuite/Scheduler/Errors/end_undetermed.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 - 2000-01-06

# MARK: error 5 end_undetermed

task t1 "Task1" {
	start 2000-01-01
	duration 2d
	scheduling alap
}

